--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://miriamsobrino.github.io/giphy-clone",
+  "homepage": "https://miriamsobrino.github.io/giphy-clone/",
   "name": "giphy-clon",
   "private": true,
   "version": "0.0.0",
